--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ poise = "0.6"
 tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"] }
 serde = "1.0"
 serde_yml = "0.0"
+pretty_yaml = "0.5"
 pest = "2.8"
 pest_derive = "2.8"
