Tons of command-related fixes and doodads

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tiny_discord_bot"
 version = "0.1.0"
 edition = "2024"
+resolver = "3"
 
 [profile.release]
 strip = true
@@ -12,11 +13,13 @@ codegen-units = 1
 #lazy_static = "1.5"
 #chrono = "0.4"
 poise = "0.6"
-tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
 serde = "1.0"
 serde_yml = "0.0"
-ctrlc = { version = "3.4.7", features = ["termination"] }
+ctrlc = { version = "3.4", features = ["termination"] }
+const_format = "0.2"
 #pretty_yaml = "0.5"
 #pest = "2.8"
 #pest_derive = "2.8"
-const_format = "0.2.34"
+chrono = "0.4"
+log = "0.4.27"
