--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ codegen-units = 1
 #lazy_static = "1.5"
 #chrono = "0.4"
 poise = "0.6"
-tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
 serde = "1.0"
 serde_yml = "0.0"
 ctrlc = { version = "3.4", features = ["termination"] }
@@ -25,3 +25,4 @@ chrono = "0.4"
 log = "0.4.27"
 lazy_static = "1.5.0"
 strsim = "0.11"
+#arc-swap = "1.7"
