--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tiny_discord_bot"
-version = "0.1.0"
+version = "1.1.0"
 edition = "2024"
 resolver = "3"
 
@@ -26,3 +26,4 @@ log = "0.4.27"
 lazy_static = "1.5.0"
 strsim = "0.11"
 #arc-swap = "1.7"
+indoc = "2"
